# ninja-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ext/gtest/: CMakeLists.txt
include/: core.h  fileLoader.h  gba_memory.h
src/: core.cpp  fileLoader.cpp  gba_memory.cpp  main.cpp
test/: fileLoader_test.cpp  sanityTest.cpp
